--- a/src/RuhRoh.Samples.AspNetCore.csproj
+++ b/src/RuhRoh.Samples.AspNetCore.csproj
@@ -14,8 +14,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="RuhRoh.Extensions.Microsoft.DependencyInjection" Version="0.1.19-alpha" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
